--- a/Home.css
+++ b/Home.css
@@ -9,7 +9,7 @@
 .u-section-1 .u-text-1 {
   font-weight: 700;
   line-height: 1.3;
-  margin: 53px 0;
+  margin: 40px 0;
 }
 
 @media (max-width: 1199px) {
@@ -469,7 +469,7 @@
   }
 
   .u-section-4 .u-text-4 {
-    margin-top: -35px;
+    margin-top: 0px;
     margin-bottom: 60px;
   }
 }
@@ -484,10 +484,11 @@
   }
 
   .u-section-4 .u-table-1 {
-    height: 139px;
+    height: auto;
     width: auto;
     margin-right: initial;
     margin-left: initial;
+    margin-bottom: 10px;
   }
 
   .u-section-4 .u-image-1 {
@@ -1808,7 +1809,7 @@
 
 .u-section-7 .u-text-2 {
   background-image: none;
-  margin: 24px 43px 60px;
+  margin: 24px 43px 15px;
 }
 
 .u-section-7 .u-btn-1 {
@@ -1848,3 +1849,37 @@
     min-height: 490px;
   }
 }
+
+.text-dark-bg {
+  
+  display: block;
+  
+  margin: 10px 43px;
+  padding: 10px 20px;
+  overflow: auto;
+  font-size: 13px;
+  line-height: 1.1;
+  word-wrap: break-word;
+  background: #eeeeee;
+  color: #333;
+}
+
+@media (max-width: 1199px) {
+  .text-dark-bg {
+    margin: 0px 0px;
+    font-size: 13px;
+  }
+}
+@media (max-width: 991px) {
+  .text-dark-bg {
+    margin: 0px 0px;
+    font-size: 7px;
+  }
+}
+@media (max-width: 575px) {
+  .text-dark-bg {
+    margin: 0px 0px;
+    font-size: 5px;
+  }
+}
+
